--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #f0f0f0;
+    background-color: #0c42b0;
     font-family: 'Roboto', sans-serif;
     margin: 1.2rem;;
     padding: 1.2rem;
@@ -16,7 +16,7 @@ h2{
 }
 
 #header{
-    background-color: #800000;
+    background-color: #008064;
     color: #fff;
     padding: 1.2rem 0;
     text-align: center;
@@ -50,7 +50,7 @@ h2{
 }
 
 #form {
-    background: #F5F5DC
+    background: #F5F5DC;
     border: 1.2rem solid red;
     padding: 1.2rem;
     margin: 1.2 rem;
@@ -62,7 +62,7 @@ h2{
     font-size: 1.2rem;
 
 }
-#form input , {
+#form input {
     width: 90%;
     padding: 0.4rem;
     margin-bottom: 1.2rem;
@@ -76,7 +76,7 @@ h2{
    padding: 0.4rem;
     width: 90%;
 
-    hover: #f0f0f0;
+
 }
 
 /* #form button{
